# Semi-Auto-NovelAI-to-Pixiv

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  README_EN.md  SECURITY.md  VERSION  _requirements.py  batchtxt.py  g4f.vbs  i2i.py  inpaint.py  main.py  mian.py  mosaic.py  pixiv.py  plugins.json  pyproject.toml  requirements.txt  requirements_linux.txt  run.bat  run_stand_alone_scripts.bat  selector.py  t2i.py  waifu2x.py  water.py
.github/: FUNDING.yml  dependabot.yml  dependabot.yml.yml  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: issue-template-question.md  issue-template-suggestion.md
.github/ISSUE_TEMPLATE/PULL_REQUEST_TEMPLATE/: pull-request-template.md
.github/workflows/: check_format_autofix.yml  update_dependencies.yml
files/: click_by_key.html  favorite.json  favorite_example.json  plugins.json  webui_en.json  webui_zh.json
files/SANP_DOCS/: launch.py  mkdocs.yml  requirements.txt
files/favorites/: actions.yaml  artists.yaml  characters.yaml  emotions.yaml  negative.yaml  prefixes.yaml  stains.yaml  surroundings.yaml
files/favorites_example/: actions.yaml  artists.yaml  characters.yaml  emotions.yaml  negative.yaml  prefixes.yaml  stains.yaml  surroundings.yaml
files/languages/: README.md
files/webui/: main_bak.py  main_new.py  plugins.json  select_by_hot_key.html
plugins/: sanp_plugin_test.py
plugins/sanp_plugin_template/: __init__.py  utils.py
plugins/webui/: sanp_plugin_test.py
src/: batch_inpaint.py  batch_mosaic.py  batch_tagger.py  batch_vibe_transfer.py  batch_waifu2x.py  batch_watermark.py  batchtxt.py  director_tools.py  i2i.py  image2image.py  image2pixiv.py  inpaint.py  m2m.py  mosaic.py  mosaic_old.py  mosold.py  movie2movie.py  pixiv.py  pnginfo_modify.py  rminfo.py  selector.py  setting.py  setting_update.py  t2i.py  tagger.py  text2image_nsfw.py  text2image_sfw.py  tiled_upscale.py  tileups.py  vibe.py  waifu2x.py  water.py
utils/: downloader.py  env.py  error.py  g4f.py  gpt4free.py  imgtools.py  jsondata.py  naimeta.py  pixivposter.py  plugin.py  predir.py  prepare.py  restart.py  selector.py  update.py  utils.py
(+59 files in other folders)
